workloads/applications/base/camel-wfp-app-integration/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camel-wfp-app-sandbox-integration
  namespace: camel-wfp
  labels:
    app: camel-wfp-app-sandbox-integration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camel-wfp-app-sandbox-integration
  template:
    metadata:
      labels:
        app: camel-wfp-app-sandbox-integration
    spec:
      serviceAccountName: camel-wfp-integration
      containers:
        - image: 744692937981.dkr.ecr.us-east-1.amazonaws.com/camel-wfp-integration:latest
          name: camel-wfp-sandbox-integration
          ports:
            - containerPort: 8080
              name: http
          imagePullPolicy: Always
          resources:
            limits:
              memory: "2Gi"
              cpu: ".75"
            requests:
              memory: "2Gi"
              cpu: ".5"
      imagePullSecrets:
        - name: us-east-1-ecr-registry
