workloads/applications/base/camel-wfp-app-integration/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: camel-wfp
  name: camel-wfp-app-integration
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: camel-wfp-app-sandbox-integration
